--- a/public/partials/actividad.html
+++ b/public/partials/actividad.html
@@ -59,28 +59,40 @@
 		<div>
 			{{filtrotxtprocedimiento.codigo}}
 		</div>
-        <div>
-            <div class="btn-group">
-                <button ng-class="{disabled: actualizando > 0}" class="btn btn-default" ng-click="descargarExcel()">
-                    <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;Descargar excel
-                </button>&nbsp;&nbsp;
+		<div>
+			<div class="btn-group">
+				<button ng-class="{disabled: actualizando > 0}" class="btn btn-default" ng-click="descargarExcel()">
+					<span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;Descargar excel
+				</button>&nbsp;&nbsp;
 				<a class="btn btn-default" role="button" href="/resumenorganica/{{idjerarquia}}" ng-if="idjerarquia && !seleccionado">Ver resumen</a>
 				<a class="btn btn-default" role="button" href="/resumenorganica/{{seleccionado.id}}" ng-if="seleccionado && seleccionado.id">Ver resumen</a>
-                <p ng-if="actualizando > 0">Generando informe...</p>
-            </div>
-            <div class="alert {{respuesta.clase}}" role="alert">{{respuesta.mensaje}}</div>
-        </div>
+				<p ng-if="actualizando > 0">Generando informe...</p>
+			</div>
+			<div class="alert {{respuesta.clase}}" role="alert">{{respuesta.mensaje}}</div>
+		</div>
 		<div ng-if="procedimientosfiltrados.length" class="table-responsive">
-			<table class="table table-striped table-bordered table-condensed table-hover" id="procedimientostable">
+			<table class="table table-striped table-bordered table-hover" id="procedimientostable" ng-class="{'table-condensed': $root.condensed}">
 				<thead>
 					<tr>
 						<th>Progreso</th>
-						<th ng-class="{danger:orderby=='codigo' }" ng-click="reverse=!reverse;orderby='codigo'">{{'codigo'|translate}}</th>
-						<th ng-class="{danger:orderby=='denominacion' }" ng-click="reverse=!reverse;orderby='denominacion'">{{'denominacion'|translate}}</th>
-						<th ng-class="{danger:orderby=='cod_plaza' }" ng-click="reverse=!reverse;orderby='cod_plaza'">{{'cod_plaza'|translate}}</th>
-						<th ng-class="{danger:orderby=='ancestro' }" ng-click="reverse=!reverse;orderby='ancestro'">{{'A cargo de'|translate}}</th>
-						<th ng-class="{danger:orderby=='periodos[anualidad].totalsolicitudes' }" ng-click="reverse=!reverse;orderby='periodos[anualidad].totalsolicitudes'">Solicitudes {{anualidad.substring(1,5)}}</th>
-						<th ng-class="{danger:orderby=='periodos[anualidad].solicitados[mesanterior]' }" ng-click="reverse=!reverse;orderby='periodos[anualidad].solicitados[mesanterior]'">Solicitudes {{meses[mesanterior]}}</th>
+						<th ng-class="{'danger':orderby==='codigo'}" ng-click="reverse=!reverse;orderby='codigo'">{{'codigo'|translate}}
+							<span aria-hidden ng-show="orderby==='codigo'" class="glyphicon" ng-class="{'glyphicon-sort-by-attributes': !reverse, 'glyphicon-sort-by-attributes-alt': reverse}"></span>
+						</th>
+						<th ng-class="{'danger':orderby=='denominacion' }" ng-click="reverse=!reverse;orderby='denominacion'">{{'denominacion'|translate}}
+							<span aria-hidden ng-show="orderby==='denominacion'" class="glyphicon" ng-class="{'glyphicon-sort-by-attributes': !reverse, 'glyphicon-sort-by-attributes-alt': reverse}"></span>
+						</th>
+						<th ng-class="{'danger':orderby=='cod_plaza' }" ng-click="reverse=!reverse;orderby='cod_plaza'">{{'cod_plaza'|translate}}
+							<span aria-hidden ng-show="orderby==='cod_plaza'" class="glyphicon" ng-class="{'glyphicon-sort-by-attributes': !reverse, 'glyphicon-sort-by-attributes-alt': reverse}"></span>
+						</th>
+						<th ng-class="{'danger':orderby=='ancestro' }" ng-click="reverse=!reverse;orderby='ancestro'">{{'A cargo de'|translate}}
+							<span aria-hidden ng-show="orderby==='ancestro'" class="glyphicon" ng-class="{'glyphicon-sort-by-attributes': !reverse, 'glyphicon-sort-by-attributes-alt': reverse}"></span>
+						</th>
+						<th ng-class="{'danger':orderby=='periodos[$root.anualidad].totalsolicitudes'}" ng-click="reverse=!reverse;orderby='periodos[$root.anualidad].totalsolicitudes'">Solicitudes {{$root.anualidad.substring(1,5)}}
+							<span aria-hidden ng-show="orderby==='periodos[$root.anualidad].totalsolicitudes'" class="glyphicon" ng-class="{'glyphicon-sort-by-attributes': !reverse, 'glyphicon-sort-by-attributes-alt': reverse}"></span>
+						</th>
+						<th ng-class="{'danger':orderby=='periodos[$root.anualidad].solicitados[mesanterior]' }" ng-click="reverse=!reverse;orderby='periodos[$root.anualidad].solicitados[mesanterior]'">Solicitudes {{meses[mesanterior]}} {{$root.anualidad.substring(1,5)}}
+							<span aria-hidden ng-show="orderby==='periodos[$root.anualidad].solicitados[mesanterior]'" class="glyphicon" ng-class="{'glyphicon-sort-by-attributes': !reverse, 'glyphicon-sort-by-attributes-alt': reverse}"></span>
+						</th>
 					</tr>
 				</thead>
 				<tfoot>
@@ -94,30 +106,30 @@
 				</tfoot>
 				<tbody>
 					<tr ng-repeat="proc in procedimientosfiltrados |filter:filtrotxtprocedimiento | orderBy : orderby : reverse | pagination : currentPage*itemsPerPage | limitTo: itemsPerPage">
-						<td class="text-center"><span class="sparkline ng-cloak" data-value="{{proc.periodos[anualidad].solicitados | json}}"></span></td>
+						<td class="text-center"><span class="sparkline ng-cloak" data-value="{{proc.periodos[$root.anualidad].solicitados | json}}"></span></td>
 						<th class="text-center">{{proc.codigo}}</th>
 						<td><a href="/procedimiento/{{proc.codigo}}">{{proc.denominacion}}</a></td>
 						<td class="text-center">{{proc.cod_plaza}}</td>
 						<td class="text-center"><a href="/actividad/{{proc.ancestros[ 0 ].id}}">{{proc.ancestros.length==0 ? '' : proc.ancestros[ 0 ].nombrelargo}}</a></td>
-						<td class="text-right">{{proc.periodos[anualidad].totalsolicitudes}}</td>
-						<td class="text-right">{{proc.periodos[anualidad].solicitados[mesanterior]}}</td>
+						<td class="text-right">{{proc.periodos[$root.anualidad].totalsolicitudes}}</td>
+						<td class="text-right">{{proc.periodos[$root.anualidad].solicitados[mesanterior]}}</td>
 					</tr>
 				</tbody>
 			</table>
 
 			<div class="col-md-12 text-center" ng-If="pageCount()>0">
 				<div class="pagination-div">
-				 <ul class="pagination">
-				  <li ng-class="DisablePrevPage()">
-					  <span  ng-click="prevPage()">Anteriores</span>
-				  </li>
-				  <li ng-repeat="n in range()" ng-class="{active: n == currentPage}" ng-click="setPage(n)">
-					  <span >{{n+1}}</span>
-				  </li>
-				  <li ng-class="DisableNextPage()">
-					  <span ng-click="nextPage()">Siguientes</span>
-				  </li>
-				 </ul>
+					<ul class="pagination">
+						<li ng-class="DisablePrevPage()">
+							<span ng-click="prevPage()">Anteriores</span>
+						</li>
+						<li ng-repeat="n in range()" ng-class="{active: n == currentPage}" ng-click="setPage(n)">
+							<span >{{n+1}}</span>
+						</li>
+						<li ng-class="DisableNextPage()">
+							<span ng-click="nextPage()">Siguientes</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
