--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -120,7 +120,7 @@
 						</div>
 					</div>
 					<div class="portlet-body">
-						<ul style="max-height:300px; overflow-y:auto; overflow-x:hidden">
+						<ul style="max-height:300px; overflow-y:auto; overflow-x:hidden" ng-class="{'small': $root.condensed}">
 							<li ng-repeat="procedimiento in pendientes">
 								<a href="/procedimiento/{{procedimiento._id.codigo}}">
 									[{{procedimiento._id.codigo}}]
@@ -142,7 +142,7 @@
 						</div>
 					</div>
 					<div class="portlet-body">
-						<ul style="max-height:300px; overflow-y:auto; overflow-x:hidden">
+						<ul style="max-height:300px; overflow-y:auto; overflow-x:hidden" ng-class="{'small': $root.condensed}">
 							<li ng-repeat="procedimiento in inconsistencias">
 								<a href="/procedimiento/{{procedimiento._id.codigo}}">
 									[{{procedimiento._id.codigo}}]
